<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LifeWordMission</string>
    <string name="menu_settings">Settings</string>
    <string name="address">경기도 안양시 동안구 관양2동 1509번지</string>
    <string name="tel_data">031)422&#8211;0691, 070&#8211;7121&#8211;1000</string>
	<string name="fax_data">031)422&#8211;0691, 070&#8211;7121&#8211;1000</string>
	<string name="email_data">scmaster@jbch.org</string>
	
	<string name="domestic_item1">주관</string>
	<string name="domestic_item2">날짜</string>
	<string name="domestic_item3">강사</string>
	<string name="domestic_item4">연락처</string>
	<string name="domestic_item5">주소</string>
	<string name="domestic_item6">장소</string>
	<string-array name="first_char">
        <item>ㄱ</item>
		<item>ㄴ</item>
		<item>ㄷ</item>
		<item>ㄹ</item>
		<item>ㅁ</item>
		<item>ㅂ</item>
		<item>ㅇ</item>
		<item>ㅈ</item>
		<item>ㅊ</item>
		<item>ㅋ</item>
		<item>ㅍ</item>
		<item>ㅎ</item>
    </string-array>
</resources>