<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <include
        layout="@layout/topmenu"
        android:id="@+id/topmenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <include
        layout="@layout/intro_top_common"
        android:id="@+id/tab_btn"
        android:layout_below="@+id/topmenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
	<ImageView
	    android:id="@+id/find_church_title"
   	    android:layout_below="@+id/tab_btn"
   	    android:layout_alignParentLeft="true"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:contentDescription="@null"
   	    android:background="@drawable/copy_p3">
    </ImageView>

	<TextView
	    android:id="@+id/btn_bg_geo"
   	    android:layout_below="@+id/find_church_title"
   	    android:layout_centerHorizontal="true"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="15dp"
   	    android:text="@string/address"
   	    android:textColor="#ffffff"
   	    android:textStyle="bold"
   	    android:paddingLeft="80dp"
   	    android:textSize="@dimen/intro_default_text_size"
   	    android:gravity="center_vertical"
   	    android:background="@drawable/btn_bg_geo">
    </TextView>
	<TextView
	    android:id="@+id/btn_bg_tel"
   	    android:layout_below="@+id/btn_bg_geo"
   	    android:layout_centerHorizontal="true"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="15dp"
   	    android:text="@string/tel_data"
   	    android:textColor="#ffffff"
   	    android:textStyle="bold"
   	    android:paddingLeft="80dp"
   	    android:textSize="@dimen/intro_default_text_size"
   	    android:gravity="center_vertical"
   	    android:background="@drawable/btn_bg_tel">
    </TextView>
	<TextView
	    android:id="@+id/btn_bg_fax"
   	    android:layout_below="@+id/btn_bg_tel"
   	    android:layout_centerHorizontal="true"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="15dp"
   	    android:text="@string/fax_data"
   	    android:textColor="#ffffff"
   	    android:textStyle="bold"
   	    android:paddingLeft="80dp"
   	    android:textSize="@dimen/intro_default_text_size"
   	    android:gravity="center_vertical"
   	    android:background="@drawable/btn_bg_fax">
    </TextView>
	<TextView
	    android:id="@+id/btn_bg_email"
   	    android:layout_below="@+id/btn_bg_fax"
   	    android:layout_centerHorizontal="true"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="15dp"
   	    android:text="@string/email_data"
   	    android:textColor="#ffffff"
   	    android:textStyle="bold"
   	    android:paddingLeft="80dp"
   	    android:textSize="@dimen/intro_default_text_size"
   	    android:gravity="center_vertical"
   	    android:background="@drawable/btn_bg_email">
    </TextView>
</RelativeLayout>
